update-manager (0.57.1) feisty; urgency=low

  * fix proxy authentication parser (lp: #83563)
  * fix crash in check_all_updates_installable() (LP#84794)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 13 Feb 2007 13:27:09 +0100

update-manager (0.57) feisty; urgency=low

  * added clickable CVE and buglinks

 -- Michael Vogt <michael.vogt@ubuntu.com>  Thu,  8 Feb 2007 12:11:04 +0100

update-manager (0.56.1) feisty; urgency=low

  * fix FTBFS 
  * update po/

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed,  7 Feb 2007 21:18:39 +0100

update-manager (0.56) feisty; urgency=low

  * added --proposed switch to fetch a release-upgrader from a different
    location (similar to the -proposed pocket in the archive)
  * split into update-manager and update-manager-core and support
    cli release upgrades with the later
  * added fdsend module to support file descriptor passing over sockets
    this will allow a better seperation between frontend and backend
    in the future

 -- Michael Vogt <michael.vogt@ubuntu.com>  Wed,  7 Feb 2007 18:02:35 +0100

update-manager (0.55.1) feisty; urgency=low

  * fix FTBFS (missing cdbs b-d)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon,  5 Feb 2007 13:58:15 +0100

update-manager (0.55) feisty; urgency=low

  * moved software-properties into its own source package to
    support a kde frontend

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon,  5 Feb 2007 10:52:26 +0100

update-manager (0.53.6) feisty; urgency=low

  * properly extract the package name that fails before 
    calling out to apports package_hook
  * fix crash on exit before the main loop is run (lp: #82744)

 -- Michael Vogt <michael.vogt@ubuntu.com>  Thu,  1 Feb 2007 23:32:02 +0100

update-manager (0.53.5) feisty; urgency=low

  * update to the new exceptions from python-dbus in
    setupDBus (lp: #81802)
  * fix FTFBS

 -- Michael Vogt <michael.vogt@ubuntu.com>  Mon, 29 Jan 2007 13:19:21 +0100

update-manager (0.53.4) feisty; urgency=low
