@@ -1,7 +1,9 @@
 update-manager (0.57.1) feisty; urgency=low
 
   * fix proxy authentication parser (lp: #83563)
-  * fix crash in check_all_updates_installable() (LP#84794)
+  * fix crash in check_all_updates_installable() (LP#84776)
+  * fix exception when strange permissions are set on meta-release
+    file (LP#84724)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 13 Feb 2007 13:27:09 +0100
 
